feat: add bookstore functions
