# routes/api.php
@@ -1,9 +1,15 @@
 <?php
 
+use App\Http\Controllers\BookStocks;
 use Illuminate\Support\Facades\Route;
 
-use App\Http\Controllers\Pets;
+use App\Http\Controllers\Books;
 
-Route::get('/pets', [Pets::class, 'index']);
-Route::post('/pets', [Pets::class, 'store']);
-Route::get('/pets/{id}', [Pets::class, 'show']);
+Route::group(['prefix' => ''], function () {
+    Route::get('/books', [Books::class, 'index']);
+    Route::post('/books', [Books::class, 'store']);
+    Route::get('/books/{id}', [Books::class, 'show']);
+    Route::get('/book-stocks', [BookStocks::class, 'index']);
+    Route::post('/book-stocks', [BookStocks::class, 'store']);
+    Route::get('/book-stocks/{id}', [BookStocks::class, 'show']);
+});
